Make SetGenericFont not use aStartStruct-based computation since it's fundamentally incompatible with it.  b=216456  r+sr=bzbarsky